--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <title>Conway's game of life</title>
   </head>
   <style>
     body {
@@ -22,5 +22,11 @@
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <pre id="game-of-life-canvas"></pre>
     <script src="./bootstrap.js"></script>
+
+    <pre>
+      Conway's game of life \\
+      Implemented in <a href="https://www.rust-lang.org/">rust</a>
+      by <a href="https://github.com/AndrewPomorski/wasm-game-of-life">Andrew Pomorski</a>
+    </pre>
   </body>
 </html>
