--- a/www/index.html
+++ b/www/index.html
@@ -16,11 +16,17 @@
       align-items: center;
       justify-content: center;
     }
+    .game-canvas {
+      border: 1px solid red;
+      padding: 15px;
+      width: 600px !important;
+      height: 600px !important;
+    }
   </style>
 
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <pre id="game-of-life-canvas"></pre>
+    <pre id="game-of-life-canvas" class="game-canvas"></pre>
     <script src="./bootstrap.js"></script>
 
     <pre>
