--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <pre id="game-of-life-canvas" class="game-canvas"></pre>
+    <canvas id="game-of-life-canvas" class="game-canvas"></canvas>
     <script src="./bootstrap.js"></script>
 
     <pre>
