--- a/www/index.html
+++ b/www/index.html
@@ -26,8 +26,10 @@
 
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <button id="play-pause"></button>
     <canvas id="game-of-life-canvas" class="game-canvas"></canvas>
+    <button id="play-pause"></button>
+    <label for="fps-slider">FPS</label>
+    <input type="range" id="fps-slider" min="1" max="60">
     <script src="./bootstrap.js"></script>
 
     <pre>
