toggle cells on click

--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,8 @@
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <canvas id="game-of-life-canvas" class="game-canvas"></canvas>
     <button id="play-pause"></button>
-    <label for="fps-slider">FPS</label>
-    <input type="range" id="fps-slider" min="1" max="60">
+    <label for="fps-slider">Simulation speed</label>
+    <input type="range" id="fps-slider" min="1" max="60" value="30">
     <script src="./bootstrap.js"></script>
 
     <pre>
